--- a/app/src/main/res/layout/splashscreen.xml
+++ b/app/src/main/res/layout/splashscreen.xml
@@ -6,6 +6,7 @@
               android:background="@color/black">
 
     <ImageView
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/splashScreenImage"
@@ -14,6 +15,7 @@
         />
 
     <TextView
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/autor"
