añadidos las imagenes como botones

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -9,4 +10,46 @@
                 tools:context=".MainActivity"
                 android:background="@color/black">
 
-</RelativeLayout>
+    <ImageView
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/splashScreenImage"
+        android:src="@drawable/motor"
+        android:background="@color/black"
+        />
+
+    <RelativeLayout
+        android:id="@+id/buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp">
+
+        <ImageButton
+            android:id="@+id/btnStart"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/startselector"
+            android:clickable="true"
+            >
+        </ImageButton>
+
+        <ImageButton
+            android:id="@+id/btnExit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/exitselector"
+            android:clickable="true"
+            />
+
+
+    </RelativeLayout>
+
+
+
+
+    </RelativeLayout>
